tests/ui/macros/issue-68060.stderr
error: `#[target_feature]` attribute cannot be used on closures
  --> $DIR/issue-68060.rs:4:13
   |
LL |             #[target_feature(enable = "")]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[target_feature]` can be applied to methods and functions

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/issue-68060.rs:6:13
   |
LL |             #[track_caller]
   |             ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
